Changes for SPECPROC-6 - Adjust SYSTEM_CALL definition.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -120,6 +120,10 @@
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_m_work_plan_class[M_WORK_PLAN]
 [.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_parameter_def_class[PARAMETER_DEF]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_parameter_mapping_class[PARAMETER_MAPPING]
+[.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_performable_action_class[PERFORMABLE_ACTION]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_plan_calendar_class[PLAN_CALENDAR]
